infra/ingress/ingress-analytics.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: appsxyzabc.com
      http:
        paths:
          - path: /analytics
            pathType: Exact
            backend:
              service:
                name: analytics-service
                port:
                  number: 8004
