infra/ingress/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: appsxyzabc.com
      http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /signup
            pathType: Exact
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
