infra/ingress/ingress-finance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: appsxyzabc.com
      http:
        paths:
          - path: /apply
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /apply-finance  
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /update_status
            pathType: Prefix
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /dashboard-info
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /financing-options
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
