infra/ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appsxyzabc.com
      secretName: appsxyzabc-tls
    - hosts:
        - beta.appsxyzabc.com  
      secretName: beta-appsxyzabc-tls  
  
  rules:
    # Rule for production domain
    - host: appsxyzabc.com
      http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /signup
            pathType: Exact
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /analytics
            pathType: Exact
            backend:
              service:
                name: analytics-service
                port:
                  number: 8004
          - path: /apply
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /apply-finance  
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /admin/update_status
            pathType: Prefix
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /dashboard-info
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /financing-options
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /admin/applications
            pathType: Exact
            backend:
              service:
                name: finance-service
                port:
                  number: 8002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finapp-service
                port:
                  number: 80

    # Rule for beta subdomain
    - host: beta.appsxyzabc.com
      http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: authbeta-service
                port:
                  number: 8001
          - path: /signup
            pathType: Exact
            backend:
              service:
                name: authbeta-service
                port:
                  number: 8001
          - path: /analytics
            pathType: Exact
            backend:
              service:
                name: analyticsbeta-service
                port:
                  number: 8004
          - path: /apply
            pathType: Exact
            backend:
              service:
                name: financebeta-service 
                port:
                  number: 8002  
          - path: /apply-finance  
            pathType: Exact
            backend:
              service:
                name: financebeta-service
                port:
                  number: 8002
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: financebeta-service
                port:
                  number: 8002
          - path: /admin/update_status
            pathType: Prefix
            backend:
              service:
                name: financebeta-service
                port:
                  number: 8002
          - path: /dashboard-info
            pathType: Exact
            backend:
              service:
                name: financebeta-service
                port:
                  number: 8002
          - path: /financing-options
            pathType: Exact
            backend:
              service:
                name: financebeta-service
                port:
                  number: 8002
          - path: /admin/applications
            pathType: Exact
            backend:
              service:
                name: financebeta-service
                port:
                  number: 8002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finappbeta-service
                port:
                  number: 80
